--- a/configs/default.cfg
+++ b/configs/default.cfg
@@ -2,3 +2,9 @@
 CHECK_JAVASCRIPT = True
 CHECK_PHP = True
 REJECT_COMMIT = True
+[receive]
+TMP_DIR = /tmp/git_hook_dir/
+CHECK_JAVASCRIPT = True
+CHECK_PHP = True
+REJECT_RECEIVE = True
+EMPTY_REF = 0000000000000000000000000000000000000000
