执行pre-receive时将错误信息记录到数据库中

--- a/configs/default.cfg
+++ b/configs/default.cfg
@@ -9,4 +9,5 @@ TMP_DIR = /tmp/git_hook_dir/
 CHECK_JAVASCRIPT = True
 CHECK_PHP = True
 REJECT_RECEIVE = True
+SAVE_REPORT = True
 EMPTY_REF = 0000000000000000000000000000000000000000
