修改依赖的jshint版本，以解决jshint新版本导致的问题

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "jshint": "2.1.x",
+    "jshint": "2.1.4",
     "shelljs": "0.1.x",
     "underscore": "1.4.x",
     "events": "0.x.x",
